src/objects/Employment_Type_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <label>Employment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full-time</fullName>
                </value>
                <value>
                    <fullName>Part-time</fullName>
                </value>
                <value>
                    <fullName>Casual</fullName>
                </value>
                <value>
                    <fullName>Fixed Term</fullName>
                </value>
                <value>
                    <fullName>Shiftworker</fullName>
                </value>
                <value>
                    <fullName>Daily / Weekly Hire</fullName>
                </value>
                <value>
                    <fullName>Probation</fullName>
                </value>
                <value>
                    <fullName>Apprentice / Trainee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interpretation_Rule_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interpretation Rule ID</label>
        <referenceTo>tc9_et__Interpretation_Rule__c</referenceTo>
        <relationshipLabel>Employment Type Mappings</relationshipLabel>
        <relationshipName>Employment_Type_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <label>Employment Type Mapping</label>
    <nameField>
        <displayFormat>ETM-{0000}</displayFormat>
        <label>Employment Type Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Type Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>